<resources>
    <string name="app_name">doof</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="prompt_email">E-mail</string>
    <string name="prompt_password">Mot de passe</string>
    <string name="action_sign_in">CONNEXION</string>
    <string name="action_sign_in_short">CONNEXION</string>
    <string name="error_invalid_email">E-mail incorect</string>
    <string name="error_invalid_password">Mot de passe trop court</string>
    <string name="error_incorrect_password">Mot de passe incorect</string>
    <string name="error_field_required">Ce champs est requis</string>
    <string name="login_button">CONNEXION</string>
    <string name="lost_password">MOT DE PASSE OUBLIÉ ?</string>
    <string name="or">ou</string>
    <string name="register">CRÉER UN NOUVEAU COMPTE DOOF</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email completions.""</string>
    <string name="ignore">ignoré</string>
    <string name="have_acount">Déjà un compte ?</string>
    <string name="create_acount">Créer un compte</string>
    <string name="prompt_family_name">Nom</string>
    <string name="prompt_name">Prénom</string>
    <string name="prompt_e_mail">Adresse email</string>
    <string name="prompt_password_2">Mot de passe (confirmer)</string>
    <string name="prompt_adress">Adresse</string>
    <string name="prompt_phone">Téléphone</string>
    <string name="prompt_validate">Confirmer</string>
    <string name="title_activity_bottom">DOOF</string>
    <string name="title_agenda">Agenda</string>
    <string name="title_rechercher">Rechercher</string>
    <string name="title_publier">Publier</string>
    <string name="title_profil">Profil</string>
    <string name="title_activity_reset_password">DOOF</string>
    <string name="opinions">avis</string>
    <string name="home">Accueil </string>
    <string name="cooked">Cuisine </string>
    <string name="cleanliness">Propreté </string>
    <string name="profile_meals">Menus</string>
    <string name="profile_coms">Commentaires</string>
    <string name="nb_online_meals_profle">X menus en lignes</string>
    <string name="nb_last_meals_profle">Précédent menus</string>
    <string name="description_profile_photo">profile photo</string>
    <string name="description_star_1">star 1</string>
    <string name="description_star_2">star 2</string>
    <string name="descriiption_star_3">star 3</string>
    <string name="description_star_4">star 4</string>
    <string name="description_star_5">star 5</string>
    <string name="description_textview">TextView</string>
    <string name="profile_edit_photo">Modifier photo</string>
    <string name="profile_edit_profile">Modifier profil</string>
    <string name="nb_coms_profile">X commentaires</string>
    <string name="oups">OUPS !!!</string>
    <string name="title_activity_internet_required">DOOF</string>
    <string name="validate_button">Valider</string>
    <string name="edit_profilie">Modifier votre profil</string>
    <string name="update_profile_photo">Modifier votre photo de profil</string>
    <string name="prompt_search_file_photo">parcourir</string>
    <string name="prompt_take_photo">prendre photo</string>
    <string name="prompt_tab_map">Map</string>
    <string name="prompt_tab_list">List</string>
    <string name="button_plus">+</string>
    <string name="button_minus">-</string>
    <string name="title_activity_meal">MealActivity</string>
    <string name="is_true_contenant">Contenant fourni</string>
    <string name="is_false_contenant">Contenant NON fourni</string>
    <string name="not_connected_user">Vous n\'etes pas connecté veuillez vous connecté</string>
    <string name="not_connected_cooker">Vous n\'etes pas encore DOOFER COOKER veuillez vous enregistré</string>
    <string name="thansk">MERCI !</string>
    <string name="receive_coord">Vous receverez les coordonnées lorsque le chef validera votre commande</string>
    <string name="back_home">Retour à l\'accueil</string>
    <string name="prompt_comment">Commenter</string>
    <string name="leave_comment">Laisser un ommentaire</string>
    <string name="note_cleanless">Note de propreté</string>
    <string name="prompt_note_cook">Note de cuisine</string>
    <string name="prompt_note_home">Note d\'accueil</string>
    <string name="prompt_command_hour">Commander pour:</string>
    <string name="prompt_title_allergen">Information allergies</string>
    <string name="prompt_button_map">Afficher sur la carte</string>
    <string name="prompt_finalise_command">Finaliser la commande</string>
    <string name="prompt_modify">modifier</string>
    <string name="one_choice">Un seul choix</string>
    <string name="no_choice">Faites un choix</string>
    <string name="no_enouth_tiket">Pas assez de tiket veuillez payer par CB ou PayPal</string>
    <string name="prompt_button_payment_info">Ajouter les informations de paiement</string>
    <string name="prompt_or">OU</string>
    <string name="prompt_system_payment">Système d\'échange</string>
    <string name="prompt_limit_payment">Limite : - 50 tickets</string>
    <string name="prompt_sold">Mon solde:</string>
    <string name="prompt_integrate_system">Intégrer le système d\'échange</string>
    <string name="prompt_button_register_caution">Enregistrer ma caution (non encaissé)</string>
    <string name="prompt_button_tutorial">Comment marche le système d\'échange ?</string>
    <string name="prompt_total">Total</string>
    <string name="prompt_button_validate_command">Passer la commande</string>
    <string name="prompt_title_payment">paiement</string>
    <string name="prompt_add_payment">Ajouter un moyen de paiement</string>
    <string name="step1_title">1- Quand souhaitez-vous proposer votre plat?</string>
    <string name="recurence">Récurence 1 fois</string>
    <string name="button_forward"><![CDATA[<]]> Retour</string>
    <string name="button_next">Suivant <![CDATA[>]]></string>
    <string name="step_1_5">1/5</string>
    <string name="add_new_adress">Ajouter une nouvelle adresse</string>
    <string name="step2_title">2- A quelle adresse je cuisien?</string>
    <string name="step2_adress">1 rue aristide Olivier 34000 Montpellier</string>
    <string name="step_2_5">2/5</string>
    <string name="step3_title">3- Mon plat</string>
    <string name="step1_tutorial_description">Je suis pour des Doofers en échange de \" Tickets Doof \"</string>
    <string name="step1_tutorial_example">Exemple:</string>
    <string name="step1_tutorial_example1"><![CDATA[-> Je propose la part à 10 tickets]]></string>
    <string name="step1_tutorial_example2"><![CDATA[-> On me commande 7 parts]]></string>
    <string name="step1_tutorial_example3"><![CDATA[-> Je reçois 70 tickets]]></string>
    <string name="close">X</string>
    <string name="step2_tutorial_description">Jepeux commander des plats grâce à mes \"Tickets Doof\"</string>
    <string name="step2_tutorial_example1">Quand je n\'ai pas le temps ou l\'envie de cuisiner, il me suffit de commander !</string>
    <string name="step3_title_tutorial_description">Si je n\'ai pas de Ticket, je peux quand même commander !</string>
    <string name="step3_tutorial_example0">Mon solde: 0 ticket</string>
    <string name="step3_tutorial_example1"><![CDATA[-> Je commande un plat à 8 tickets]]></string>
    <string name="step3_tutorial_example2"><![CDATA[-> Mon solde -8 tickets]]></string>
    <string name="step3_tutorial_example3"><![CDATA[-> Il me suffira de proposer un plat prochainement !]]></string>
    <string name="step4_tutorial_title">Ce que je gagne:</string>
    <string name="step4_tutorial_example0">Je gagne du temps, en cuisinan une fois je peux commander de nombreux plats !</string>
    <string name="step4_tutorial_example1">Je symphatise avec mes voisins</string>
    <string name="step4_tutorial_example2">Je ne gaspille plus d\'argent à manger dehors ou en livraison</string>
    <string name="step4_tutorial_example3">Je mange de bon plats fraichement cuisinés tous les jours</string>
    <string name="step5_tutorial_description">C\'est gratuit</string>
    <string name="step5_tutorial_example">Il suffit juste d\'enregistrer une caution (non encaissée) pour éviter que des petits malins commandent des plats sans jamais cuisiner en retour :)</string>
    <string name="prompt_understand">J\'ai compris !</string>
    <string name="skip">passer</string>
    <string name="prompt_date">DD/MM</string>
    <string name="prompt_hour">Créneau horaire</string>
    <string name="prompt_step1_title">1- Quand souhaitez vous proposer votre plat ?</string>
    <string name="prompt_step2_title">2- A quelle adresse je cuisine ?</string>
    <string name="prompt_add_new_adress">Ajouter une nouvelle adresse</string>
    <string name="prompt_step3_title">3- Mon plat</string>
    <string name="prompt_name_meal">Nom du plat</string>
    <string name="prompt_description_meal">Description de mon plat</string>
    <string name="prompt_nb_portion">Quantité de part maximum</string>
    <string name="prompt_price">Montant</string>
    <string name="step_3_5">3/5</string>
    <string name="prompt_step5_title">5- Récapitulatif</string>
    <string name="step_5_5">5/5</string>
    <string name="prompt_conteneur">Conteneur</string>
    <string name="prompt_error_fild">Veuillez inscrire tous les champs</string>
    <string name="prompt_select_adress">Veuillez selecteionné une adresse</string>
    <string name="prompt_select_prompt_only_one">Veuillez selectionné une seule adresse</string>
    <string name="prompt_edit_all">Veuillez renseigné tous les champs</string>
    <string name="prompt_portion">Indiquer le nombre de portion</string>
    <string name="prompt_add_photo">Ajouter une photo</string>
    <string name="prompt_step1_date">Date:</string>
    <string name="prompt_step1_time">Heure:</string>
    <string name="prompt_step1_duration">Pendant:</string>
    <string name="toast_prompt_take_photo">Prendre une photo</string>
    <string name="prompt_write_com">Ecriver un commentaire</string>
    <string name="prompt_resest_password">Réinitialiser mot de passe</string>
    <string name="prompt_error_email">Adresses non valide</string>
    <string name="prompt_error_password">Mot de pass non identique ou inférieur à 8 caractère</string>
    <string name="prompt_error_adress">Renseigner adresse</string>
    <string name="prompt_error_firstname">Renseigner votre prénom</string>
    <string name="prompt_error_familyname">Renseigné votre nom</string>
    <string name="prompt_error_nbportion">renseigné le nombre de portion</string>
    <string name="prompt_error_impossible">ERREUR IMPOSSIBLE</string>
    <string name="prompt_commend">COMMANDER</string>
    <string name="prompt_deconexion">Déconnection</string>
    <string name="prompt_title_credit">Acheter des tickets</string>
    <string name="prompt_credit">Créditer des tickets</string>
    <string name="prompt_new">Nouveaux:</string>
    <string name="prompt_old">Ancien:</string>
    <string name="prompt_profile_tab_params">Paramètres</string>
    <string name="prompt_calendar_old">Anciens:</string>
    <string name="prompt_calendar_new">Nouveaux:</string>
    <string name="prompt_nothing">Aucun plat</string>
    <string name="prompt_password_actual">Mot de pass (actuel)</string>
    <string name="prompt_update_password">Modifier votre mot de passe</string>
    <string name="prompt_meal_online">menus en lignes</string>
    <string name="prompt_meal_last">menus terminés</string>
    <string name="prompt_already_exist">Le compte existe déjà</string>
</resources>